# jmd-mcp-sql

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
jmd_mcp_sql/: __init__.py  config.py  install_northwind.py  northwind.sql  schema.py  server.py  translator.py
tests/: test_open.py  test_translator.py
